# kafka-examples

./: README.md  kafka_word_generator.py  pyproject.toml  spark_kafka_word_count.py
